--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/eduard0bp/estudosTypeScript#readme",
   "dependencies": {
-    "live-server": "^1.2.2"
+    "@types/node": "^18.7.18",
+    "live-server": "^1.2.2",
+    "systemjs": "^0.21.6"
   }
 }
